--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		  font-weight:500;
 	  }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&key=AIzaSyBKGym1XVdyMQRixwmJRy04TkJSz7w8FQ0"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="js/jAlert-master/src/jAlert-v3.min.js"></script>
 	<script src="js/jAlert-master/src/jAlert-functions.min.js"></script>
